# monkai-hub-cli

./: LICENSE  README.md  pyproject.toml
src/monkai_hub_cli/: __init__.py  auth.py  config.py  main.py  output.py  supabase_client.py  tester_client.py
tests/: test_commands.py  test_output.py
