[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "monkai-hub-cli"
version = "0.1.1"
description = "CLI for MonkAI Hub — configure, run and manage agent tests from the terminal"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "BeMonkAI", email = "contato@monkai.com.br"},
]
keywords = ["monkai", "hub", "cli", "agent-testing", "ai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "typer>=0.9.0,<1.0.0",
    "httpx>=0.27.0,<1.0.0",
]

[project.urls]
Homepage = "https://www.monkaihub.com"
Documentation = "https://github.com/BeMonkAI/monkai-hub-cli#readme"
Repository = "https://github.com/BeMonkAI/monkai-hub-cli"
Issues = "https://github.com/BeMonkAI/monkai-hub-cli/issues"

[project.scripts]
monkai-hub = "monkai_hub_cli.main:app"

[tool.hatch.build.targets.wheel]
packages = ["src/monkai_hub_cli"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
